fix: add page-main-wrap class

--- a/ui/src/common/sideNavLayout.scss
+++ b/ui/src/common/sideNavLayout.scss
@@ -35,6 +35,9 @@
     padding-left: 12px;
     padding-right: 12px;
   }
+  .page-main-wrap {
+    max-width: 100%;
+  }
   .page-main {
     max-width: 100%;
   }
